bug: fix map layout bug;

--- a/css/styles.css
+++ b/css/styles.css
@@ -336,7 +336,7 @@ nav h1 a {
 
 @media only screen and (min-width: 768px) {
     #map {
-        height: 100%;
+        height: 500px;
     }
     #restaurants-list {
         flex-flow: row wrap;
@@ -367,6 +367,9 @@ nav h1 a {
         order: 2;
         width: 65%;
         height: calc(100vh - 145px);
+    }
+    #map {
+        height: 100%;
     }
     #restaurants {
         order: 1;
